# nxc_test_manager

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: test_runs.py  webhooks.py  websocket.py
backend/app/models/: __init__.py  test_log.py  test_result.py  test_run.py
backend/app/schemas/: test_run.py
backend/app/services/: ai_review.py  docker_manager.py  empire.py  github.py  notifier.py  test_runner.py
backend/app/tasks/: __init__.py  test_tasks.py
backend/docker/empire-init/: init-listener.sh
backend/docker/test-runner/: Dockerfile  run_tests.sh
backend/tests/: conftest.py  test_ai_review.py  test_api.py  test_parse.py  test_webhook.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/__tests__/: StatusBadge.test.tsx  api.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/app/runs/: page.tsx
frontend/src/app/runs/[id]/: page.tsx
frontend/src/components/: LogViewer.tsx  StatusBadge.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  claude.ts  websocket.ts
frontend/src/types/: index.ts
nginx/: nginx.conf
