[tool.poetry]
name = "netexec-test-manager"
version = "0.1.0"
description = "End-to-end testing manager for NetExec pull requests"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
sqlalchemy = "^2.0.46"
psycopg2-binary = "^2.9.11"
pydantic = {extras = ["email"], version = "^2.12.0"}
pydantic-settings = "^2.12.0"
redis = "^7.1.0"
celery = "^5.6.0"
docker = "^7.1.0"
httpx = "^0.28.0"
python-multipart = "^0.0.22"
websockets = "^16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.1.0"
black = "^26.1.0"
ruff = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".mypy_cache",
    ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "venv"
]
line-length = 320
preview = true

[tool.ruff.lint]
select = [
    "E", "F", "D", "UP", "YTT", "ASYNC", "B", "A", "C4", "ISC", "ICN", "PIE", "PT",
    "Q", "RSE", "RET", "SIM", "TID", "ERA", "FLY", "PERF", "LOG", "RUF", "W"
]
ignore = [
    "A004", "E501", "F405", "D100", "D101", "D102", "D103", "D104", "D105", "D106",
    "D107", "D203", "D204", "D205", "D212", "D213", "D400", "D401", "D413", "D415",
    "D417", "D419", "FURB", "RET503", "RET505", "RET506", "RET507", "RET508",
    "PERF203", "RUF012", "RUF052", "RUF059",
    "B008", "RUF029", "RUF067",
]
fixable = ["ALL"]
unfixable = []
per-file-ignores = {}
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"
